src/test/vm/recurse-reentry.php.exp
HipHop Fatal error: Stack overflow in src/test/vm/recurse-reentry.php on line 4
