src/test/vm/recurse-reentry.php
<?

function f() {
  call_user_func('f');
}

call_user_func('f');


